--- a/LvTao/res/layout/main.xml
+++ b/LvTao/res/layout/main.xml
@@ -6,5 +6,5 @@
               android:background="#ffffff">
 
     <include layout="@layout/titlebar"/>
-    <include layout="@layout/banner"/>
+    <include layout="@layout/body"/>
 </LinearLayout>
