--- a/LvTao/res/layout/main.xml
+++ b/LvTao/res/layout/main.xml
@@ -6,5 +6,14 @@
               android:background="#ffffff">
 
     <include layout="@layout/titlebar"/>
-    <include layout="@layout/body"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+        <include layout="@layout/body"/>
+    </LinearLayout>
+
+    <include layout="@layout/bottom"/>
 </LinearLayout>
