--- a/LvTao/res/values/styles.xml
+++ b/LvTao/res/values/styles.xml
@@ -10,4 +10,15 @@
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
     </style>
+
+    <style name="bottom_menu_text">
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="bottom_menu_button">
+        <item name="android:layout_width">35dp</item>
+        <item name="android:layout_height">35dp</item>
+    </style>
 </resources>
