--- a/LvTao/res/color/tab_selector_tv_color.xml
+++ b/LvTao/res/color/tab_selector_tv_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:color="#b8df90"/>
+    <item android:state_checked="true" android:color="#48d1ae"/>
     <item android:state_checked="false" android:color="#333333"/>
     <item android:color="#333333"/>
 
