--- a/LvTao/res/layout/body.xml
+++ b/LvTao/res/layout/body.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    tools:context=".MyMainActivity" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#ffffff"
+              android:orientation="vertical"
+              tools:context=".MyMainActivity">
 
     <me.widget.pulltorefresh.library.PullToRefreshScrollView
             xmlns:ptr="http://schemas.android.com/apk/res-auto"
@@ -18,32 +18,35 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
             <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="150dp" >
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp">
 
                 <android.support.v4.view.ViewPager
-                    android:id="@+id/viewpager"
-                    android:layout_width="fill_parent"
-                    android:layout_height="150dp" />
+                        android:id="@+id/viewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"/>
 
                 <LinearLayout
-                    android:id="@+id/linearLayout"
-                    android:layout_width="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginRight="20dp"
-                    android:gravity="bottom" >
+                        android:id="@+id/linearLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:layout_marginBottom="5dp">
                 </LinearLayout>
             </FrameLayout>
 
             <include layout="@layout/body_menu"/>
-        </LinearLayout>
 
+            <ListView
+                    android:id="@+id/listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+            </ListView>
+        </LinearLayout>
     </me.widget.pulltorefresh.library.PullToRefreshScrollView>
 
 </LinearLayout>
